# ursip

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 02c1e2e4223f_create_tables.py
src/: asgi.py
src/data/: controler.py  interactor.py  protocol.py  router.py  schemas.py
src/database/: __init__.py  models.py  settings.py
src/services/excel_converter/: __init__.py  base.py  converter.py
