[tool.poetry]
name = "ursip"
version = "0.1.0"
description = ""
authors = ["gevlen <gevlenko1993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.1"
openpyxl = "^3.1.2"
fastapi = "^0.95.1"
sqlalchemy = "^2.0.12"
aiosqlite = "^0.19.0"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"
alembic = "^1.10.4"
orjson = "^3.8.12"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
